# mlops-spam-pipeline

./: LICENSE  README.md  env-setup-steps.txt  pyproject.toml
experiments/: spam.csv
